--- a/css/main.css
+++ b/css/main.css
@@ -1,1 +1,52 @@
+body {
+  display: flex;
+  justify-content: center;
+  background-color: #c9bca6;
+}
 
+.container {
+  border: 1px solid black;
+  margin: 20px 20px;
+  padding: 30px;
+  text-align: center;
+  background-color: #96805a;
+}
+h1 {
+  margin-top: 5px;
+  color: #2d261b;
+}
+
+form {
+  border: 1px solid #542a2e;
+  display: flex;
+  align-items: center;
+  flex-direction: column;
+  margin: 10px;
+  padding: 30px;
+  background-color: #af9b79;
+}
+aside {
+  margin-bottom: 10px;
+  color: #24393d;
+}
+#value-one, #value-two {
+  border-radius: 5px;
+  width: 90px;
+  font-size: 20px;
+  margin: 15px;
+  background-color: #ece7df;
+}
+button {
+  border-radius: 5px;
+  border: 1px solid #392228;
+  margin: 20px;
+  padding: 10px;
+  font-size: 16px;
+  color: #24393d;
+  background-color: #ece7df;
+}
+
+.answer {
+  color: #2d261b;
+  font-size: 22px;
+}
